<resources>
    <string name="app_name" translatable="false">Nirvana</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">HOME</string>
    <string name="menu_signup" translatable="false">SIGNUP</string>
    <string name="menu_login" translatable="false">LOGIN</string>
    <string name="menu_about" translatable="false">ABOUT US</string>
    <string name="menu_support" translatable="false">SUPPORT</string>
    <string name="menu_what_we_do" translatable="false">WHAT WE DO</string>
    <string name="menu_what_we_offer" translatable="false">WHAT WE OFFER</string>
    <string name="music_player" translatable="false">Music Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="player_error" translatable="false">Error initializing YouTube player: %s</string>
    <string name="seek_to" translatable="false">Jump To</string>
    <string name="seek_to_hint" translatable="false">Seconds</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="speech_prompt" translatable="false">Say something&#8230;</string>
    <string name="speech_not_supported" translatable="false">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic" translatable="false">Tap on mic to speak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="agora_app_id" translatable="false">f95bc5e4844449509948cc0aa754a180</string>
    <string name="title_activity_doctor_view" translatable="false">DoctorViewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="title_activity_start_meeting">start_meeting</string>
    <string name="title_activity_video_calling">video_calling</string>
    <string name="title_activity_video_calling_incom">video_calling_incom</string>
    <string name="title_activity_voice_calling_outgoing">voice_calling_outgoing</string>
    <string name="title_activity_voice_call_incom">voice_call_incom</string>
</resources>
